--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p {
 .zone {
     display: grid;
     grid-template-columns: 340px 1fr;
-    grid-template-rows: 800px auto;
+    grid-template-rows: auto auto;
   }
   .corners {
     border-radius: 16px;
@@ -171,6 +171,17 @@ hr {
   height: 80px;
   padding: auto;
   position: relative;
+}
+.social-list {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align:center;}
+.social {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
 }
 
 @media (max-width:1750px){
