--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 body{
-  padding: 25px 200px;
+  padding: 25px 150px;
   background-color: #FEF7FF;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -153,25 +153,53 @@ hr {
     margin: 20px 0px;
     display: grid;
     grid-gap: 30px 30px;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   }
 
 .ability-item {
-  display: flex;
-  background-color: white;
-  padding: 10px;
-  min-width: 200px;
+  display: grid;  
+  grid-template-columns: 80px 1fr;
+  grid-template-rows: 1fr 1fr;
   height: 80px;
+  padding: 10px;
 
+  background-color: white;
   border: 1px solid var(--color-stroke);
 }
 
 .ability-icon {
-  width:  80px;
-  height: 80px;
-  padding: auto;
-  position: relative;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  width:  80%;
+  height: 80%;
+  margin: auto;
+
+  display: flex;
+
+  justify-content: center;
+  align-content: center;
 }
+
+.ability-text-header {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+
+  margin-top: 10px;
+}
+.ability-text-description {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+
+  vertical-align: bottom;
+}
+
 .social-list {
   position: relative;
   display: block;
@@ -184,7 +212,14 @@ hr {
   border-radius: 50%;
 }
 
-@media (max-width:1750px){
+.fit-in-parent {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+
+@media (max-width:1400px){
   body{
     padding: 25px 0px;
   }
