--- a/css/base.css
+++ b/css/base.css
@@ -25,3 +25,12 @@ p {
   font-size: 1rem;
   color: #cccccc;
 }
+
+a {
+  color: #dab900;
+  text-decoration: none; /* Убирает подчёркивание (по желанию) */
+}
+
+a:hover {
+  color: #ffd700; /* Более яркий оттенок при наведении (по желанию) */
+}
