--- a/css/base.css
+++ b/css/base.css
@@ -3,11 +3,17 @@ body {
   font-family: 'Consolas', 'Courier New', 'Lucida Console', Monaco, monospace;
   background-color: #2d2d2d;
   color: #ffffff;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+}
+
+main {
+  width: 80%;
+  max-width: 1000px;
+  margin-top: 20px;
+  padding: 0;
 }
 
 h1, h2 {
