--- a/css/header.css
+++ b/css/header.css
@@ -1,29 +1,27 @@
-/* Стили для хедера */
 header {
   width: 100%;
   display: flex;
-  justify-content: center; /* Центрируем навигацию */
+  justify-content: center;
   align-items: center;
   padding: 20px;
   background-color: #2a2a2a;
 }
 
-/* Стили для навигации */
 nav {
   display: flex;
-  justify-content: center; /* Размещаем кнопки по центру */
+  justify-content: center;
   gap: 40px;
-  width: 100%; /* Навигация растягивается на весь экран */
+  width: 100%;
 }
 
 nav a {
-  text-decoration: none; /* Убираем подчеркивание у ссылок */
+  text-decoration: none;
 }
 
 button {
-  all: unset; /* Сбрасываем стандартные стили кнопок */
+  all: unset;
   font-size: 1rem;
-  color: white; /* Цвет текста для неактивных кнопок */
+  color: white;
   cursor: pointer;
   text-align: center;
 }
@@ -33,8 +31,8 @@ button h1{
 }
 
 button.active {
-  color: gold; /* Синий цвет для активной кнопки */
-  border-bottom: 2px solid gold; /* Подчеркивание для активной кнопки */
+  color: gold;
+  border-bottom: 2px solid gold;
 }
 
 button:hover {
@@ -42,14 +40,13 @@ button:hover {
 }
 
 button:focus {
-  outline: none; /* Убираем стандартное обводку при фокусе */
+  outline: none;
 }
 
-/* Стили для кнопки, которая не активна */
 button:not(.active) {
-  color: white; /* Белый цвет текста для неактивных кнопок */
+  color: white;
 }
 
 button:not(.active):hover {
-  color: #ddd; /* Легкий серый цвет текста при наведении */
+  color: #ddd;
 }
