--- a/css/project.css
+++ b/css/project.css
@@ -20,13 +20,16 @@
 }
 
 /* Для изображений в карусели и миниатюр */
+/* Основное изображение в карусели */
 .carousel img, .thumbnails img {
-  object-fit: cover; /* Позволяет изображениям занимать всю область с сохранением пропорций */
+  object-fit: cover; /* Сохраняет пропорции */
   background-color: #000; /* Чёрный фон */
-  width: 100%; /* Заполнение по ширине контейнера */
-  height: 100%; /* Заполнение по высоте контейнера */
-  display: block; /* Убирает пустые промежутки вокруг изображений */
+  width: 100%; /* Заполнение по ширине */
+  height: auto; /* Высота зависит от ширины */
+  aspect-ratio: 16 / 9; /* Сохраняет пропорции 16:9 */
+  display: block; /* Убирает промежутки */
 }
+
 
 /* Для контейнера карусели и миниатюр */
 .carousel-container, .carousel, .thumbnails {
