--- a/css/project.css
+++ b/css/project.css
@@ -14,7 +14,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Сохраняет пропорции изображения и обрезает лишнее */
+  object-fit: contain; /* Сохраняет пропорции изображения и обрезает лишнее */
 }
 
 /* Thumbnails Styles */
@@ -27,7 +27,7 @@
 .thumbnails img {
   width: 100px; /* Фиксированная ширина для миниатюр */
   height: 56.25px; /* Высота для 16:9 */
-  object-fit: cover; /* Сохраняет пропорции и обрезает лишнее */
+  object-fit: contain; /* Сохраняет пропорции изображения и обрезает лишнее */
   background-color: #000; /* Черный фон, если изображений нет */
 }
 
@@ -49,7 +49,7 @@
 
 .carousel img {
   width: 100%;
-  object-fit: cover;
+  object-fit: contain; /* Сохраняет пропорции изображения и обрезает лишнее */
   background-color: #000; /* Черный фон, если изображение отсутствует */
 }
 
