--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,5 @@
 @import url('header.css');
 @import url('portfolio.css');
 @import url('project.css');
+@import url('skill-card.css');
 @import url('timeline.css');
