--- a/css/project.css
+++ b/css/project.css
@@ -1,74 +1,92 @@
-/* Основной контейнер карусели и миниатюр */
-.carousel-container,
-.thumbnails {
+/* Top Section */
+.top-section {
   display: flex;
-  gap: 10px;
-  justify-content: center;
+  gap: 15px;
+  background-color: #3a3a3a;
+  border-radius: 10px;
+  padding-bottom: 10px;
+}
+
+.carousel-container {
+  position: relative;
+  flex: 2;
+  overflow: hidden;
 }
 
 .carousel {
   display: flex;
-  gap: 10px;
-  overflow: hidden;
+  gap: 1px;
+  transition: transform 0.5s ease;
 }
 
-.carousel img,
-.thumbnail-img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  aspect-ratio: 16 / 9; /* Задание соотношения сторон 16:9 */
-  background-color: black; /* Черный фон, если картинка не заполняет */
-}
-
-/* Для миниатюр */
-.thumbnail-img {
-  width: 150px;
-  height: auto;
-  object-fit: cover;
-  aspect-ratio: 16 / 9;
-}
-
-/* Стиль для карусели */
 .carousel img {
-  object-position: center; /* Центрируем изображение */
-  max-width: 100%; /* Максимальная ширина 100% */
-  max-height: 100%; /* Максимальная высота 100% */
-}
-
-/* Картинка-постер проекта */
-.poster {
   width: 100%;
-  height: auto;
   object-fit: cover;
-  aspect-ratio: 16 / 9;
-  background-color: black;
-}
-
-/* Оформление карусели и миниатюр */
-.carousel-container {
-  margin-bottom: 20px;
+  border-radius: 10px;
+  border-radius: 10px 0px 0px 0px;
 }
 
 .carousel-btn {
-  background-color: transparent;
-  border: none;
-  font-size: 2rem;
-  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
-}
-
-/* Оформление карточек для миниатюр */
-.thumbnail-img {
+  border: none;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out;
+  padding: 10px;
+  z-index: 1;
 }
 
-.thumbnail-img:hover {
-  transform: scale(1.1);
+.prev-btn {
+  left: 10px;
 }
 
-/* Стили для активной миниатюры */
-.thumbnail-img.active {
-  border: 2px solid #dab900;
+.next-btn {
+  right: 10px;
+}
+
+.thumbnails {
+  display: flex;
+  justify-content: space-between; /* Равномерное распределение элементов */
+  margin-top: 10px;
+}
+
+.thumbnails img {
+  flex-grow: 1; /* Элементы будут растягиваться, чтобы заполнить доступное пространство */
+  max-width: 150px; /* Ограничиваем максимальную ширину, чтобы они не становились слишком большими */
+  object-fit: cover; /* Сохраняем соотношение сторон при растягивании */
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.thumbnails img.active {
+  border: 2px solid #007acc;
+}
+
+.project-info {
+  flex: 1;
+  border-radius: 10px;
+}
+
+.project-info .poster {
+  width: 100%;
+  aspect-ratio: 4 / 3; 
+  border-radius: 0px 10px 0px 0px;
+  margin: 0px;
+  object-fit: cover; 
+}
+
+.short-description p {
+  margin: 0px;
+}
+
+.details-section {
+  padding: 20px;
+}
+
+.details-section h2 {
+  font-size: 1.5rem;
+  color: #fff;
+  margin-bottom: 10px;
 }
