--- a/css/project.css
+++ b/css/project.css
@@ -21,9 +21,10 @@
 
 .carousel img {
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 10px;
   border-radius: 10px 0px 0px 0px;
+  aspect-ratio: 16/9;
 }
 
 .carousel-btn {
