--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,5 @@
 @import url('portfolio.css');
 @import url('project.css');
 @import url('skill-card.css');
+@import url('tag.css');
 @import url('timeline.css');
