--- a/css/pages/portfolio.css
+++ b/css/pages/portfolio.css
@@ -2,7 +2,7 @@
 
 .portfolio-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
 
@@ -12,18 +12,18 @@
   border-radius: 10px;
   padding: 10px;
   background-color: #3a3a3a;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .project:hover {
   transform: translateY(-2.5px);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .project img {
   width: 100%;
-  aspect-ratio: 4 / 3; 
-  object-fit: cover; 
+  aspect-ratio: 4 / 3;
+  object-fit: cover;
   border-radius: 10px;
 }
 
