--- a/css/pages/project.css
+++ b/css/pages/project.css
@@ -97,3 +97,8 @@
   margin-bottom: 10px;
 }
 
+/* Основные стили для полос прокрутки */
+.thumbnails {
+  scrollbar-color: rgb(204, 174, 2) #222222;  /* Цвет ползунка (темно-серый) и фона полосы прокрутки (светло-серый) для Firefox */
+}
+
