--- a/css/pages/project.css
+++ b/css/pages/project.css
@@ -102,3 +102,18 @@
   scrollbar-color: rgb(204, 174, 2) #222222;  /* Цвет ползунка (темно-серый) и фона полосы прокрутки (светло-серый) для Firefox */
 }
 
+.project-links {
+  margin-top: 10px;
+  font-size: 1rem;
+}
+
+.project-link {
+  color: #ffcc00;
+  text-decoration: none;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.project-link:hover {
+  text-decoration: underline;
+}
