--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
 main {
   flex: 1;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
