--- a/src/pages/Project.css
+++ b/src/pages/Project.css
@@ -47,11 +47,22 @@
   display: grid;
   grid-template-columns: minmax(0, 2fr) minmax(0, 1fr);
   gap: 16px;
-  background: linear-gradient(90deg, #2d2d2d, #2d2d2d 20%, #1d1d1d 29%, #1d1d1d 71%, #2d2d2d 80%, #2d2d2d);
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
-  padding-left: calc(50vw - 50%);
-  padding-right: calc(50vw - 50%);
+  position: relative;
+  isolation: isolate;
+  padding-top: 8px;
+}
+
+.project-main-section::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 1500px;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+  background: linear-gradient(90deg, #2d2d2d, #1d1d1d 250px, #1d1d1d 1250px, #2d2d2d);
+  z-index: -1;
 }
 
 .project-banner {
