--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,17 @@ p {
   margin-bottom: 1rem;
 }
 
+li {
+  font-size: 1rem;
+  color: #cccccc;
+  margin-bottom: 0rem; /* Reduced from 1rem */
+}
+
+em {
+  font-size: 1rem;
+  color: #cccccc;
+}
+
 a {
   color: #dab900;
   text-decoration: none;
